# tau

./: .gitignore  AGENTS.md  ARCHITECTURE.md  Cargo.toml  DESIGN.md  README.md  flake.nix
.agents/skills/preview-site/: SKILL.md
.config/selfci/: ci.sh
.github/: README.md
.tau/: sessions.cbor
config/: cli.json5  harness.json5  models.json5
crates/shlop-cli/: Cargo.toml
crates/shlop-cli-term/src/: lib.rs  main.rs  screen.rs
crates/shlop-cli/src/: cli.rs  lib.rs  main.rs
crates/shlop-config/: Cargo.toml
crates/shlop-config/src/: lib.rs
crates/shlop-core/src/: lib.rs
crates/shlop-socket/tests/: daemon_attach.rs
crates/shlop-supervisor/tests/: supervisor.rs
crates/shlop-test-support/: Cargo.toml
crates/shlop-test-support/src/: lib.rs
crates/tau/: Cargo.toml
crates/tau-agent/: Cargo.toml
crates/tau-agent/src/: lib.rs  openai.rs  responses.rs
crates/tau-blocking-notify-channel/src/: lib.rs
crates/tau-cli/: Cargo.toml
crates/tau-cli-term/: Cargo.toml
crates/tau-cli-term-raw/: Cargo.toml  README.md
crates/tau-cli-term-raw/src/: lib.rs  main.rs  screen.rs  style.rs
crates/tau-cli-term/src/: completion.rs  lib.rs  main.rs
crates/tau-cli/src/: cli.rs  lib.rs
crates/tau-config/: Cargo.toml
crates/tau-config/src/: lib.rs  settings.rs
crates/tau-core/: Cargo.toml
crates/tau-core/src/: lib.rs
crates/tau-ext-fs/: Cargo.toml
crates/tau-ext-fs/src/: lib.rs  main.rs
crates/tau-ext-shell/: Cargo.toml
crates/tau-ext-shell/src/: lib.rs  main.rs
crates/tau-harness/: Cargo.toml
crates/tau-harness/src/: lib.rs  runtime_dir.rs
crates/tau-proto/: Cargo.toml
crates/tau-proto/src/: diff.rs  events.rs  lib.rs
crates/tau-provider/: Cargo.toml
crates/tau-provider/src/: cli.rs  lib.rs  oauth.rs  storage.rs
crates/tau-skills/: Cargo.toml
crates/tau-skills/src/: lib.rs
crates/tau-socket/: Cargo.toml
crates/tau-socket/tests/: daemon_attach.rs
crates/tau-supervisor/: Cargo.toml
crates/tau-supervisor/src/: lib.rs
crates/tau-supervisor/tests/: supervisor.rs
crates/tau-test-support/: Cargo.toml
crates/tau-test-support/src/: lib.rs
crates/tau-themes/: Cargo.toml
crates/tau-themes/src/: color.rs  lib.rs  text.rs  theme.rs
crates/tau-themes/themes/: tau.json5
doc/: ORIGINAL_AGENT_TASKS.md  ORIGINAL_DESIGN.md  ORIGINAL_IMPLEMENTATION_PLAN.md
site/: README.md  index.html
