[workspace]
members = [
  "crates/tau-agent",
  "crates/tau-cli",
  "crates/tau-config",
  "crates/tau-core",
  "crates/tau-ext-fs",
  "crates/tau-ext-shell",
  "crates/tau-proto",
  "crates/tau-socket",
  "crates/tau-supervisor",
  "crates/tau-blocking-notify-channel",
  "crates/tau-test-support",
  "crates/tau-cli-term-raw",
  "crates/tau-cli-term",
  "crates/tau",
]
resolver = "2"

[workspace.package]
edition = "2024"
license = "MIT OR Apache-2.0"
rust-version = "1.86"
version = "0.1.0"

[workspace.lints.rust]
unsafe_code = "forbid"

[workspace.lints.clippy]
dbg_macro = "deny"
todo = "deny"
unwrap_used = "deny"

[profile.ci]
debug = "line-tables-only"
incremental = false
inherits = "dev"
lto = "off"
