[package]
name = "shlop-cli"
version.workspace = true
edition.workspace = true
rust-version.workspace = true
license.workspace = true

[lints]
workspace = true

[dependencies]
clap = { version = "4", features = ["derive"] }
shlop-agent = { path = "../shlop-agent" }
shlop-config = { path = "../shlop-config" }
shlop-core = { path = "../shlop-core" }
shlop-ext-fs = { path = "../shlop-ext-fs" }
shlop-ext-shell = { path = "../shlop-ext-shell" }
shlop-proto = { path = "../shlop-proto" }
shlop-socket = { path = "../shlop-socket" }
shlop-supervisor = { path = "../shlop-supervisor" }

[dev-dependencies]
tempfile = "3"
