[package]
name = "tau-agent"
version.workspace = true
edition.workspace = true
rust-version.workspace = true
license.workspace = true

[lints]
workspace = true

[dependencies]
serde.workspace = true
serde_json.workspace = true
tau-config.workspace = true
tau-proto.workspace = true
ureq.workspace = true
