[package]
name = "tau-cli-term-raw"
version.workspace = true
edition.workspace = true
rust-version.workspace = true
license.workspace = true

[lints]
workspace = true

[dependencies]
crossterm = "0.28"
tau-blocking-notify-channel = { path = "../tau-blocking-notify-channel" }

[[bin]]
name = "tau-cli-term-raw-demo"
path = "src/main.rs"

[dev-dependencies]
vt100 = "0.16"
