[package]
name = "tau-cli-term-raw"
version.workspace = true
edition.workspace = true
rust-version.workspace = true
license.workspace = true

[lints]
workspace = true

[dependencies]
crossterm.workspace = true
tau-blocking-notify-channel.workspace = true

[[bin]]
name = "tau-cli-term-raw-demo"
path = "src/main.rs"

[dev-dependencies]
vt100.workspace = true
