[package]
name = "tau-cli"
version.workspace = true
edition.workspace = true
rust-version.workspace = true
license.workspace = true

[lints]
workspace = true

[dependencies]
clap.workspace = true
dirs.workspace = true
tau-agent.workspace = true
tau-cli-term.workspace = true
tau-config.workspace = true
tau-core.workspace = true
tau-ext-fs.workspace = true
tau-ext-shell.workspace = true
tau-proto.workspace = true
tau-socket.workspace = true
tau-supervisor.workspace = true

[dev-dependencies]
tempfile.workspace = true
