[package]
name = "tau-cli"
version.workspace = true
edition.workspace = true
rust-version.workspace = true
license.workspace = true

[lints]
workspace = true

[dependencies]
clap.workspace = true
dirs.workspace = true
tau-cli-term.workspace = true
tau-themes.workspace = true
tau-config.workspace = true
tau-harness.workspace = true
tau-proto.workspace = true
tau-provider.workspace = true

# Still needed for component dispatch
tau-agent.workspace = true
tau-ext-fs.workspace = true

[dev-dependencies]
tau-cli-term-raw = { workspace = true }
tempfile.workspace = true
vt100.workspace = true
