[package]
name = "tau-core"
version.workspace = true
edition.workspace = true
rust-version.workspace = true
license.workspace = true

[lints]
workspace = true

[dependencies]
ciborium.workspace = true
serde.workspace = true
tau-proto.workspace = true

[dev-dependencies]
tau-agent.workspace = true
tau-ext-fs.workspace = true
tempfile.workspace = true
