[package]
name = "tau-ext-shell"
version.workspace = true
edition.workspace = true
rust-version.workspace = true
license.workspace = true

[lints]
workspace = true

[dependencies]
ciborium.workspace = true
dirs.workspace = true
globset.workspace = true
ignore.workspace = true
serde_json.workspace = true
similar.workspace = true
tau-proto.workspace = true
tau-skills.workspace = true

[dev-dependencies]
tempfile.workspace = true
