[package]
name = "tau-harness"
version.workspace = true
edition.workspace = true
rust-version.workspace = true
license.workspace = true

[lints]
workspace = true

[dependencies]
dirs.workspace = true
serde_json.workspace = true
tau-agent.workspace = true
tau-config.workspace = true
tau-core.workspace = true
tau-ext-fs.workspace = true
tau-ext-shell.workspace = true
tau-proto.workspace = true
tau-socket.workspace = true
tau-supervisor.workspace = true

[dev-dependencies]
tempfile.workspace = true
